--- a/CaJava2011/bin/.gitignore
+++ b/CaJava2011/bin/.gitignore
@@ -1,24 +1,2 @@
-/arrayex/
-/booleanex/
-/breakex/
-/byteex/
-/characterex/
-/chat/
 /classex/
-/continueex/
-/conversionex/
-/escapeex/
-/forex/
-/ifelseex/
-/ioex/
-/kimminwoo/
-/methodex/
-/operatorex/
-/programex/
-/staticex/
-/strdpgex/
-/stringex/
-/switchex/
-/test/
-/variableex/
-/whileex/
+/.gitignore
